Running services icon toggle [2/2]
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>
Change-Id: Id700ad1ec8b20d048b5faf0cd08749044e2d7c34
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -752,4 +752,8 @@
     <string name="power_menu_bg_title">Background Filter</string>
     <string name="power_menu_bg_summary">Enables Custom filter when powermenu is active</string>
     <string name="power_menu_bg_style_title">Filter Type</string>
+
+    <!-- Running Services -->
+    <string name="qs_running_services_title">Running Services Icon</string>
+    <string name="qs_running_services_summary">Disable the tile running services icon in the footer</string>
 </resources>
