OwlsNest: Add Screen Stabilization
Change-Id: I8c3a309355ae54b4f81ae2f433c46d961569fb75
Signed-off-by: DennySPB <dennyspb@gmail.com>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -727,4 +727,12 @@
     <!-- Fingerprint unlock keystore -->
     <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
     <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
+
+    <!-- Screen Stabilization -->
+    <string name="screen_stabilization_title">Screen Stabilization</string>
+    <string name="screen_stabilization_enable">Enable Screen Stabilization</string>
+    <string name="screen_stabilization_enable_summary">Leave the below values as is if you don\'t understand what they mean.</string>
+    <string name="stabilization_velocity_friction_title">Velocity friction</string>
+    <string name="stabilization_position_friction_title">Position friction</string>
+    <string name="stabilization_velocity_amplitude_title">Velocity amplitude</string>
 </resources>
