Quick settings panel : Set transparency [2/2]
- Forward port and make it functional

Change-Id: Iee74053b92a33e72e6faf3852d181523f7c25aba
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -598,4 +598,7 @@
     <string name="volume_steps_system_title">Volume steps: System</string>
     <string name="volume_steps_voice_call_title">Volume steps: Voice Call</string>
     <string name="volume_steps_reset">Reset</string>
+
+    <!-- QuickSettings Panel Transparency -->
+    <string name="qs_panel_alpha_title">QS panel transparency</string>
 </resources>
