--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -812,4 +812,8 @@
     <!-- Battery fully charged -->
     <string name="battery_fully_charged_notif_title">Battery fully charged</string>
     <string name="battery_fully_charged_notif_summary">Show a notification when the battery is fully charged</string>
+
+    <!-- Notification count -->
+    <string name="status_bar_notif_count_title">Show notification count</string>
+    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
 </resources>
