--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -96,6 +96,10 @@
     <string name="clock_date_right">Rechts neben der Uhr</string>
     <string name="clock_date_left">Links neben der Uhr</string>
     <string name="clock_date_position">Position des Datums</string>
+    <string name="status_bar_clock_auto_hide_title">Automatisch ausblenden</string>
+    <string name="status_bar_clock_auto_hide_summary">Uhr in regelmäßigen Abständen ein- und ausblenden</string>
+    <string name="status_bar_clock_auto_hide_hdur_title">Ausblendedauer</string>
+    <string name="status_bar_clock_auto_hide_sdur_title">Anzeigedauer</string>
     <!-- Battery percentage -->
     <string name="battery_style_category_title">Akkusymbol</string>
     <string name="status_bar_battery_percentage_title">Akkustand</string>
