Let's derp the status bar logo [2/2]
 Todo: I have to find a solution for when the translations are imported.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,8 +64,8 @@
     <string name="clock_title_enable">Alignment</string>
 
     <!-- Kronic logo -->
-    <string name="kronic_logo_title">Kronic Logo</string>
-    <string name="kronic_logo_summary">Let everyone know that you\'re using AOSiP when they see your screen</string>
+    <string name="kronic_logo_title">DerpFest Logo</string>
+    <string name="kronic_logo_summary">Let everyone know that you\'re using DerpFest when they see your screen</string>
     <string name="status_bar_logo_style_title">Custom logo style</string>
 
     <!-- Statusbar ticker -->
