Hide lock screen icon [2/2]
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -145,6 +145,9 @@
     <string name="use_old_mobiletype_title">Use old mobile signal</string>
     <string name="use_old_mobiletype_summary">Use the mobile icons from oreo and before\nSystemUI will restart</string>
 
+    <string name="hide_lockscreen_icon_title">Lock icon</string>
+    <string name="hide_lockscreen_icon_summary">Show lock icon on the bottom</string>
+
     <!-- Hide notch -->
     <string name="hide_notch_title">Hide notch</string>
     <string name="hide_notch_summary">If enabled it hides notch and fills in side gaps</string>
