--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -145,6 +145,9 @@
     <string name="use_old_mobiletype_title">Use old mobile signal</string>
     <string name="use_old_mobiletype_summary">Use the mobile icons from oreo and before\nSystemUI will restart</string>
 
+    <string name="hide_lockscreen_indicator_display_title">Status text on bottom</string>
+    <string name="hide_lockscreen_indicator_display_summary">Show charging information and unlock hints</string>
+
     <string name="hide_lockscreen_icon_title">Lock icon</string>
     <string name="hide_lockscreen_icon_summary">Show lock icon on the bottom</string>
 
