Unlock keystore with fingerprint after reboot (2/2)
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -717,4 +717,8 @@
     <string name="battery_bar_gradient_color_summary">Use gradient color as a scale for the battery level</string>
     <string name="battery_bar_high_color">High level color"</string>
     <string name="battery_bar_low_color">Low level color"</string>
+
+    <!-- Fingerprint unlock keystore -->
+    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
+    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
 </resources>
