Revert "Weather: Determine weather scale based on MCC [2/2]"
This reverts commit 91b59770929f366b51fdedb7a7111d1837cb66a7.

Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -500,6 +500,11 @@
     <string name="lockscreen_cover_filter_blur">Blur</string>
     <string name="lockscreen_cover_filter_grayblur">Grayscale and blurred</string>
 
+    <!-- Weather -->
+    <string name="weather_unit">Temperature unit</string>
+    <string name="weather_unit_metric" translatable="false">Celsius</string>
+    <string name="weather_unit_imperial" translatable="false">Fahrenheit</string>
+
     <!-- Facelock toggle -->
     <string name="face_auto_unlock_title">Face auto unlock</string>
     <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
