OwlsNest: Show battery fully charged notification [2/2]
Change-Id: I5ac28eb5538cb7f75a5444ac4a08c1a6b52ce01f
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -808,4 +808,8 @@
     <string name="lockclock_font_size_title">Clock font size</string>
 
     <string name="ls_colors_fonts_title">Colors, fonts and sizes</string>
+
+    <!-- Battery fully charged -->
+    <string name="battery_fully_charged_notif_title">Battery fully charged</string>
+    <string name="battery_fully_charged_notif_summary">Show a notification when the battery is fully charged</string>
 </resources>
