--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -806,4 +806,6 @@
     <!-- Lock Clock & Date Size -->
     <string name="lockdate_font_size_title">Date font size</string>
     <string name="lockclock_font_size_title">Clock font size</string>
+
+    <string name="ls_colors_fonts_title">Colors, fonts and sizes</string>
 </resources>
